Ex 2 - Utilizando imagens

--- a/semana1/imagens.html
+++ b/semana1/imagens.html
@@ -8,10 +8,8 @@
     <title>DEVinHouse</title>
 </head>
 <body>
-    <h1>Semana 1</h1>
-    <hr>
-    <p>Este é o resultado do primeiro 
-        exercício<br> da primeira 
-        semana<br> do curso DEVinHouse. 🥰</p>
+    <img src="img1.jpg" alt="Imagem no mesmo diretorio">
+    <img src="assets/images/img2.jpg" alt="Imagem em diretorio diferente">
+    <img src="https://images.squarespace-cdn.com/content/v1/5fd56e513c1f6275809ed7d1/1633502663352-AN12VHNS3CNIUMQ1YOYG/Cat+fight+knife.jpg" alt="Imagem em diretorio web">
 </body>
 </html>
