--- a/semana1/index.html
+++ b/semana1/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>DEVinHouse</title>
 </head>
 <body>
-    <h1>Semana 1</h1>
+    <h1 class="titulo">Semana 1</h1>
     <hr>
     <p>Este é o resultado do primeiro 
         exercício<br> da primeira 
