--- a/semana1/index.html
+++ b/semana1/index.html
@@ -14,5 +14,7 @@
     <p>Este é o resultado do primeiro 
         exercício<br> da primeira 
         semana<br> do curso DEVinHouse. 🥰</p>
+
+        <a href="imagens.html" ><img class="botao" width="50px" height="50px" src="assets/images/botao.png" alt="botao"></a>
 </body>
 </html>
