Ex 5 - Imagem de fundo

--- a/semana1/index.html
+++ b/semana1/index.html
@@ -9,7 +9,9 @@
     <title>DEVinHouse</title>
 </head>
 <body>
-    <h1 class="titulo">Semana 1</h1>
+    <div class="background">
+        <h1 class="titulo">Semana 1</h1>
+    </div>
     <hr>
     <p>Este é o resultado do primeiro 
         exercício<br> da primeira 
