Ex 6 - Lado a lado

--- a/semana1/imagens.html
+++ b/semana1/imagens.html
@@ -5,12 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <style>
+    .imagemcolunas {
+    float: left;
+    width: 30.33%;
+    padding: 1%;}
+    </style>
     <title>DEVinHouse</title>
 </head>
 <body>
-    <img src="img1.jpg" alt="Imagem no mesmo diretorio">
-    <img src="assets/images/img2.jpg" alt="Imagem em diretorio diferente">
-    <img src="https://images.squarespace-cdn.com/content/v1/5fd56e513c1f6275809ed7d1/1633502663352-AN12VHNS3CNIUMQ1YOYG/Cat+fight+knife.jpg" alt="Imagem em diretorio web">
-
+    <div class="imagemcolunas">
+    <img style="width:100%" src="img1.jpg" alt="Imagem no mesmo diretorio" />
+    </div>
+    <div class="imagemcolunas">
+    <img style="width:100%" src="assets/images/img2.jpg" 
+    alt="Imagem em diretorio diferente" />
+    </div>
+    <div class="imagemcolunas">
+    <img style="width:100%" 
+    src="https://images.squarespace-cdn.com/content/v1/5fd56e513c1f6275809ed7d1/1633502663352-AN12VHNS3CNIUMQ1YOYG/Cat+fight+knife.jpg" 
+    alt="Imagem em diretorio web" />
+    </div>
 </body>
 </html>
