Ex 7 - Conteúdo externo

--- a/semana1/index.html
+++ b/semana1/index.html
@@ -17,6 +17,20 @@
         exercício<br> da primeira 
         semana<br> do curso DEVinHouse. 🥰</p>
 
-        <a href="imagens.html" ><img class="botao" width="50px" height="50px" src="assets/images/botao.png" alt="botao"></a>
+        <a href="imagens.html" >
+            <img class="botao" width="50px" height="50px" 
+            src="assets/images/botao.png" alt="botao">
+        </a>
+
+        <h1 class="titulo-video">Compilação de memes de gatos</h1>
+        <h2 class="descricaovideo">Uma pequena compilação de memes com gatos engraçados =D.</h2>
+        <iframe 
+        width="560" height="315" 
+        src="https://www.youtube.com/embed/4p712qxNmYk" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+        </iframe>
 </body>
 </html>
