Ex 8 - Navegar é preciso

--- a/semana1/index.html
+++ b/semana1/index.html
@@ -9,6 +9,14 @@
     <title>DEVinHouse</title>
 </head>
 <body>
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="imagens.html">Imagens</a>
+      </div>
+      
+      <div class="main">
+        <p>Some text some text some text some text..</p>
+      </div>
     <div class="background">
         <h1 class="titulo">Semana 1</h1>
     </div>
