Ex 10 - Assinando a criação

--- a/semana1/index.html
+++ b/semana1/index.html
@@ -40,5 +40,7 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen>
         </iframe>
+
+        <div class="rodape">Guilherme S Holm - Futuro Dev Jr. - 22 Anos - Perseverante!</div>
 </body>
 </html>
