--- a/semana2/index.html
+++ b/semana2/index.html
@@ -7,8 +7,21 @@
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
     <title>DEVinHouse Events</title>
+
 </head>
 <body>
-    
+    <h1 style="text-align: center; color: white;">DEVent's</h1>
+    <header>
+        <img class="logo" src="images/logo.svg" alt="logo" />
+        <nav>
+            <ul class="nav_links">
+                <li><a href="#">Eventos</a></li>
+                <li><a href="#">Sobre</a></li>
+            </ul>
+        </nav>
+        <a href="#" class="cta">
+            <button>Contato</button>
+        </a>
+    </header>
 </body>
 </html>
