M1S02] Ex 3 - Evento destacado

--- a/semana2/index.html
+++ b/semana2/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1 style="text-align: center; color: white;">DEVent's</h1>
     <header>
-        <img class="logo" src="images/logo.svg" alt="logo" />
+        <img class="logo" src="assets/images/logo.png" alt="logo" />
         <nav>
             <ul class="nav_links">
                 <li><a href="#">Eventos</a></li>
@@ -23,5 +23,19 @@
             <button>Contato</button>
         </a>
     </header>
+
+    <div class="evento">
+        <h1>Metallica Show</h1>
+        <img src="assets/images/metallica.jpg" alt="Imagem show metallica">
+        <p>Um show do Metallica completamente temático para todos os DEV's que curtem um rock'n'roll.</p>
+    </div>
+    <div class="description">
+        <p><img src="assets/images/calendar.png" alt="DataIcon /">Data: 09 de Julho dee 2022</p>
+        <p><img src="assets/images/clockicon.png" alt="Houricon">Horário: 20h30</p>
+        <p><img src="assets/images/location.png" alt="LocationIcon /">Local: Rodovia SC 401, nº 3730, Saco Grande,
+            Florianópolis/SC</p>
+        <p>Venha nos prestigiar com sua presença.</p>
+        <p>Estudantes pagam meia entrada, apresentando a carteirinha de identificação.</p>
+    </div>
 </body>
 </html>
