Ex 4 - Listagem de eventos

--- a/semana2/index.html
+++ b/semana2/index.html
@@ -37,5 +37,22 @@
         <p>Venha nos prestigiar com sua presença.</p>
         <p>Estudantes pagam meia entrada, apresentando a carteirinha de identificação.</p>
     </div>
-</body>
-</html>
+    </div>
+
+    <div class="container">
+    <div class="imgeventdescription">
+        <img src="assets/images/bringmethehorizon.png" width="250" height="300" alt="BMTH" />
+
+        <img src="assets/images/coldplay.gif" width="250" height="300" alt="CLPL" />
+
+        <img src="assets/images/gunnroses.png" width="250" height="300" alt="GNR" />
+        <br>
+        <img src="assets/images/linkpark.jpg" width="250" height="300" alt="LP" />
+
+        <img src="assets/images/slipknot.png" width="250" height="300" alt="SLPKNT" />
+
+        <img src="assets/images/blacksabbath.webp" width="250" height="300" alt="BS" />
+        <br>
+    </div>
+    </div>
+
