Ex 5 - Formulario Contato

--- a/semana2/index.html
+++ b/semana2/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#">Sobre</a></li>
             </ul>
         </nav>
-        <a href="#" class="cta">
+        <a href="contato.html" class="cta">
             <button>Contato</button>
         </a>
     </header>
