--- a/semana2/index.html
+++ b/semana2/index.html
@@ -52,7 +52,16 @@
         <img src="assets/images/slipknot.png" width="250" height="300" alt="SLPKNT" />
 
         <img src="assets/images/blacksabbath.webp" width="250" height="300" alt="BS" />
-        <br>
+<p></p>
     </div>
     </div>
 
+    <div class="controdp">
+        <footer class="rodape">
+            <p>Autor: Guilherme S Holm</p>
+            <p>Email: guiholm72@gmail.com</p>
+            <p>Contato: 190 - 911 :P</p>
+            <p>Av. Presidente Juscelino Kubitscheck, 1.909 - Torre Sul - 16° andar</p>
+            <p><p></p>Copyright: DEVinHouse / SENAI SC</p>
+        </footer>
+        </div>
