--- a/semana2/contato.html
+++ b/semana2/contato.html
@@ -39,5 +39,10 @@
     <div class="button">
         <button type="submit">Enviar</button>
       </div>
+
+      
+    <footer class="rodape">
+
+    </footer>
 </body>
 </html>
