--- a/semana2/contato.html
+++ b/semana2/contato.html
@@ -41,8 +41,14 @@
       </div>
 
       
-    <footer class="rodape">
-
-    </footer>
+      <div class="controdp">
+        <footer class="rodape">
+            <p>Autor: Guilherme S Holm</p>
+            <p>Email: guiholm72@gmail.com</p>
+            <p>Contato: 190 - 911 :P</p>
+            <p>Av. Presidente Juscelino Kubitscheck, 1.909 - Torre Sul - 16° andar</p>
+            <p><p></p>Copyright: DEVinHouse / SENAI SC</p>
+        </footer>
+        </div>
 </body>
 </html>
