--- a/semana2/contato.html
+++ b/semana2/contato.html
@@ -9,6 +9,7 @@
     <title>DEVinhouse Events</title>
 </head>
 <body>
+    <h1 style="text-align: center; color: white;">DEVent's</h1>
     <header>
         <img class="logo" src="assets/images/logo.png" alt="logo" />
         <nav>
