--- a/semana2/contato.html
+++ b/semana2/contato.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylecontato.css">
     <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
+    <script src="script.js" defer></script>
     <title>DEVinhouse Events</title>
 </head>
 <body>
@@ -38,7 +39,7 @@
         </div>
     </form>
     <div class="button">
-        <button type="submit">Enviar</button>
+        <button id="send" type="submit">Enviar</button>
       </div>
 
       
