--- a/semana2/index.html
+++ b/semana2/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
+    <script src="scriptprompt.js"></script>
     <title>DEVinHouse Events</title>
 
 </head>
