--- a/semana3/index.html
+++ b/semana3/index.html
@@ -4,24 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <title>DEVinHouse</title>
-    <style>
-        body {
-            background-color: black;
-        }
-        h1{
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-        h1,h2{
-            color: white;
-        }
-    </style>
 </head>
 <body>
-    <h1 align="center">Exercicio 1</h1>
-    <h2 align="center">Dobrando números</h2>
+    <h1 align="center">Exercicio 2</h1>
+    <h2 align="center">Iterando sobre arrays de objetos</h2>
+
+    <ul id="nomes">
+
+    </ul>
+
 </div>
 </body>
 </html>
-
