--- a/semana3/index.html
+++ b/semana3/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js" defer></script>
+    <!-- <script src="script.js" defer></script> -->
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="style.css"> -->
     <title>DEVinHouse</title>
+    <script src="script.js"></script>
 </head>
 <body>
     <h1 align="center">Exercicio 2</h1>
