Ex 6 - Projeto: funções e transformação de objetos

--- a/semana3/index.html
+++ b/semana3/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="style.css"> -->
     <title>DEVinHouse</title>
-    <script src="script.js"></script>
+    <script src="scriptpessoas.js"></script>
 </head>
 <body>
     <h1 align="center">Exercicio 2</h1>
