--- a/semana3/index.html
+++ b/semana3/index.html
@@ -8,16 +8,42 @@
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="style.css"> -->
     <title>DEVinHouse</title>
-    <script src="scriptpessoas.js"></script>
+    <script src="scriptpessoas.js" defer></script>
 </head>
 <body>
-    <h1 align="center">Exercicio 2</h1>
-    <h2 align="center">Iterando sobre arrays de objetos</h2>
+    <div class="container">
+        <h1 class="convidadoslist">Lista de Convidados</h1>
+    </div>
+    <div class="retancamarote">
+        <div class="camarotetext">
+            Camarote
+        </div>
+    <div class="nomescamarote">
+        <ul id="camarote">
+        </ul>
+    </div>
+    </div>
 
-    <ul id="nomes">
 
-    </ul>
+    <div class="retanarquibancada">
+        <div class="arquibancadatext">
+            Arquibancada
+        </div>
+        <div class="nomesarquibancada">
+            <ul id="arquibancada">
+            </ul>
+        </div>
+    </div>
 
+    <div class="retanpista">
+        <div class="pistatext">
+            Pista
+        </div>
+        <div class="nomespista">
+            <ul id="pista">
+            </ul>
+        </div>
+    </div>
 </div>
 </body>
 </html>
