Ex 2 - Conta bancaria Parte 2

--- a/semana4/index.html
+++ b/semana4/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="index.css">
     <title>DEVBank</title>
 </head>
-<body>
-    
+<input>
+    <select name="contas" id="contas"></select>
+    <input type="text" placeholder="Valor"></input>
+    <select name="operacoesBancarias" id="operacoesBancarias">
+        <option value="sacar">Sacar</option>
+        <option value="depositar">Depositar</option>
+    </select>
+    <button type="submit">Confirmar</button>
 </body>
 </html>
